--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="header">
     <div class="container">
-      <h1>Hello Everyone</h1>
+      <h1>Gutten Tag</h1>
       <p class="subtitle">Rule-based Symptom Triage Wizard (Not Diagnosis)</p>
       <div class="meta">
         <span>ENV: <b>{{ env }}</b></span>
